force-app/main/default/objects/Wear_Test_Survey__c/Wear_Test_Survey__c.object-meta.xml
<CustomObject>
    <description>Survey monkey results</description>
    <label>Wear Test Survey</label>
    <nameField>
        <label>Wear Test Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wear Test Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>