force-app/main/default/objects/Wear_Test_Survey__c/fields/Initial_Thoughts__c.field-meta.xml
<CustomField>
    <fullName>Initial_Thoughts__c</fullName>
    <description>Survey Question: What are your initial out of box thoughts?</description>
    <inlineHelpText>Survey Question: What are your initial out of box thoughts?</inlineHelpText>
    <label>Initial Thoughts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>