force-app/main/default/objects/Wear_Test_Survey__c/fields/Overall_Summary__c.field-meta.xml
<CustomField>
    <fullName>Overall_Summary__c</fullName>
    <description>Survey Question: Please provide an overall summary of your fit testing with the product.</description>
    <inlineHelpText>Survey Question: Please provide an overall summary of your fit testing with the product.</inlineHelpText>
    <label>Overall Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>