force-app/main/default/objects/Wear_Test_Survey__c/fields/Rate_Overall_Performance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rate_Overall_Performance_Comments__c</fullName>
    <description>Survey Question: How would you rate the overall performance?</description>
    <inlineHelpText>Survey Question: How would you rate the overall performance?</inlineHelpText>
    <label>Rate Overall Performance - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>