force-app/main/default/objects/Wear_Test_Survey__c/fields/Rate_the_Fit__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_Fit__c</fullName>
    <description>Survey Question: How would you rate the comfort of the product?</description>
    <inlineHelpText>Survey Question: How would you rate the comfort of the product?</inlineHelpText>
    <label>Rate the Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>