force-app/main/default/objects/Wear_Test_Survey__c/fields/Rate_the_Heel_Retention_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_Heel_Retention_Comments__c</fullName>
    <description>Survey Question: How would you rate the heel retention of the product?</description>
    <inlineHelpText>Survey Question: How would you rate the heel retention of the product?</inlineHelpText>
    <label>Rate the Heel Retention - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>