force-app/main/default/objects/Wear_Test_Survey__c/fields/Shoe_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Comparison__c</fullName>
    <description>Survey Question: Please describe any comparisons to other similar shoes you have used.</description>
    <inlineHelpText>Survey Question: Please describe any comparisons to other similar shoes you have used.</inlineHelpText>
    <label>Shoe Comparison</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>