force-app/main/default/objects/Wear_Test_Survey__c/fields/Wear_Test_Participant__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wear Test Participant</label>
    <referenceTo>WT_Wear_Test_Participant__c</referenceTo>
    <relationshipLabel>Wear Test Surveys</relationshipLabel>
    <relationshipName>Wear_Test_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>