force-app/main/default/objects/Wear_Test_Survey__c/fields/Wear_Test_Survey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test_Survey_Stage__c</fullName>
    <description>Since a Wear Test Participant can have multiple surveys, this field is used to specify the type or timing of the survey being recorded</description>
    <inlineHelpText>Specify the type or timing of the survey, since a Wear Test Participant may have multiple surveys.</inlineHelpText>
    <label>Wear Test Survey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40 hours / 1 week</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>